# data-scheduler

./: .gitignore  Cargo.toml  config.yml  justfile  seed.json
src/: cli.rs  config.rs  main.rs
